# UTK

./: CMakeLists.txt  LICENSE  README.en.md  README.md  hltooltip.h  main.cpp  mainwindow.cpp  mainwindow.h  messagebox.cpp  messagebox.h  resouces.qrc  stylebutton.h  titlebar.cpp  titlebar.h  uaboutdialog.cpp  uaboutdialog.h  uapplication.cpp  uapplication.h  udialog.cpp  udialog.h  umainwindow.cpp  umainwindow.h  uwidget.cpp  uwidget.h  uwidgetutils.h  widgetutils.cpp  widgetutils.h
core/: CMakeLists.txt  message.cpp  message.h  messagecenter.cpp  messagecenter.h  messagedispatcher.cpp  messagedispatcher.h  messageeventhandler.cpp  messageeventhandler.h  messageinterface.h  thread.h  utkcore_export.h
doc/: utk-framework.drawio
effect/: uclipwidget.cpp  uclipwidget.h  ugraphicsclipeffect.cpp  ugraphicsclipeffect.h  ugraphicsgloweffect.h  ugraphicswidget.h
examples/: CMakeLists.txt  datetimewidget.cpp  datetimewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  resouces.qrc  titleswidget.cpp  titleswidget.h  viewwidget.cpp  viewwidget.h
examples/translations/: Demo_en.ts  Demo_zh_CN.ts
logger/: abstractappender.h  abstractstringappender.cpp  abstractstringappender.h  consoleappender.h  cuteloggerglobal.h  fileappender.cpp  fileappender.h  logger.cpp  logger.h  loggerglobal.h  logmanager.h  rollingfileappender.h  simplelog.h
singleapplication/: qtlockedfile.cpp  qtsingleapplication.cpp
src/: CMakeLists.txt  hltooltip.cpp  hltooltip.h  resouces.qrc  titlebar.cpp  titlebar.h  udialog.cpp  udialog.h  umainwindow.h  utkwidget_export.h  uwidget.h  uwidgetutils.cpp  uwidgetutils.h
src/effect/: uclipwidget.h  ugraphicsclipeffect.h  ugraphicsgloweffect.h
src/logger/: abstractappender.cpp  abstractstringappender.h  fileappender.h  rollingfileappender.cpp  simplelog.h
src/singleapplication/: qtlocalpeer.h  qtsinglecoreapplication.h
src/style/: uproxystyle.cpp  utheme.cpp
src/widgets/: CircleItemCheckButton.h  circlebutton.cpp  delegate.cpp  hllabel.h  hlmenu.cpp  hlmenu.h  hlpasswordlineedit.h  tooltipsbutton.h
src/zip/: uzipreader.h
style/: upalette.cpp  upalette.h  uproxystyle.cpp  uproxystyle.h  ustylepainter.cpp  ustylepainter.h  utheme.cpp  utheme.h
utkcore/: CMakeLists.txt  message.cpp  message.h  messagecenter.cpp  messagecenter.h  messagedispatcher.cpp  messagedispatcher.h  messageeventhandler.cpp  messageeventhandler.h  messageinterface.h  thread.h  utkcore_global.h
utkcore/crashhandler/: crashhandler.cmake  crashhandler.cpp  crashhandler.h  ucrashhandler.cpp  ucrashhandler.h
utkcore/crashhandler/google_breakpad/: google_breakpad.cmake
utkcore/crashhandler/google_breakpad/client/mac/sender/: crash_report_sender.m
utkcore/crashhandler/google_breakpad/client/mac/testapp/: Controller.m  main.m
utkcore/crashhandler/google_breakpad/client/windows/crash_generation/: crash_generation_client.cc  minidump_generator.cc
utkcore/crashhandler/google_breakpad/client/windows/handler/: exception_handler.cc
utkcore/crashhandler/google_breakpad/common/: string_conversion.cc  string_conversion.h
utkcore/crashhandler/google_breakpad/common/mac/: GTMLogger.m  HTTPMultipartUpload.m
utkcore/crashhandler/google_breakpad/common/mac/testing/: GTMSenTestCase.m
utkcore/crashhandler/google_breakpad/tools/mac/symupload/: minidump_upload.m  symupload.m
utkcore/message/: UMessage  UMessageCenter  UMessageDispatcher  UMessageEventHandler  UMessageInterface  umessage.cpp  umessage.h  umessagecenter.cpp  umessagecenter.h  umessagedispatcher.cpp  umessagedispatcher.h  umessageeventhandler.cpp  umessageeventhandler.h  umessageinterface.h
utkcore/serializer/: abstractserializer.cpp  abstractserializer.h  jsonserializer.cpp  jsonserializer.h  serializable.cpp  serializable.h  serializable_pp.h  serializeattribute.h  serializer.cmake  serializer.cpp  serializer.h  xmlserializer.cpp  xmlserializer.h
utkcore/thread/: UThread  uthread.h
utkwidget/: CMakeLists.txt  messagebox.cpp  messagebox.h  resouces.qrc  stylebutton.cpp  stylebutton.h  titlebar.cpp  titlebar.h  uaboutdialog.cpp  uaboutdialog.h  uapplication.cpp  uapplication.h  uapplicationsettings.cpp  uapplicationsettings.h  udialog.cpp  udialog.h  uflowlayout.cpp  uflowlayout.h  umainwindow.cpp  umainwindow.h  uwidget.cpp
utkwidget/effect/: ugraphicsgloweffect.cpp  ugraphicswidget.cpp  ugraphicswidget.h
utkwidget/icons/dark/: index.theme
utkwidget/icons/light/: index.theme
utkwidget/logger/: abstractappender.h  consoleappender.cpp  consoleappender.h  logger.h  loggerglobal.h  logmanager.cpp  logmanager.h  rollingfileappender.h
utkwidget/modelview/: ustyleditemdelegate.cpp  ustyleditemdelegate.h  utablemodeltemplate.h  utreeitem.cpp  utreeitem.h  utreemodel.cpp  utreemodel.h  utreeview.cpp  utreeview.h
utkwidget/singleapplication/: qtlocalpeer.cpp  qtlockedfile.cpp  qtlockedfile.h  qtsingleapplication.h
utkwidget/style/: upalette.cpp  upalette.h  uproxystyle.cpp  uproxystyle.h  ustylepainter.h  utheme.cpp  utheme.h
utkwidget/translations/: utkwidget_en.ts  utkwidget_zh_CN.ts
utkwidget/widgets/: ArrowCircleButton.h  circlebutton.h  delegate.h  hllineedit.h  hllistview.h  hlpasswordlineedit.cpp  hlslider.h  hlstylebutton.h  ucheckbox.cpp  ucheckbox.h  uclockwidget.cpp  uclockwidget.h  ugaugespeed.cpp  ugaugespeed.h  uradioButton.cpp  uradioButton.h  uscrollbar.cpp  uscrollbar.h  uswitchbutton.cpp  uswitchbutton.h  uwaterprogress.cpp  uwaterprogress.h
utkwidget/zip/: uzipwriter.h
widgets/: ArrowCircleButton.cpp  ArrowCircleButton.h  CircleItemCheckButton.cpp  CircleItemCheckButton.h  circlebutton.h  delegate.h  hllabel.cpp  hllabel.h  hllineedit.cpp  hllineedit.h  hllistview.cpp  hllistview.h  hlmenu.cpp  hlmenu.h  hlpasswordlineedit.cpp  hlpasswordlineedit.h  hlslider.cpp  hlslider.h  hlstylebutton.cpp  hlstylebutton.h  popupmenustyle.cpp  popupmenustyle.h  tooltipsbutton.cpp  tooltipsbutton.h  uscrollbar.cpp  uscrollbar.h
zip/: uzipreader.cpp  uzipreader.h  uzipwriter.cpp  uzipwriter.h
